2009-04-28	Chris Johns <chrisj@rtems.org>

	* Makefile.am: Add bspcmdline.c.
	* include/bsp.h: Add boot command line interfaces.
	* start/start.c: Save the multiboot command line. Pass the command
	line to boot_card.
	* start/start.S: Update for boot_card command line change.
	* startup/bspstart.c: Initialise the command line.
	* startup/bspcmdline.c: New.
	* console/console.c, ide/idecfg.c: Add boot command line support.
	* ide/ide.cfg: Add prints for errors to help resolve problems.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, start/start16.S: Remove duplicate configure option and
	add support for the configure time variable BSP_VIDEO_80x50.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1344/bsps
	* clock/ckinit.c: Committed code was not final. Corrections.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>
		Michael South <msouth@msouth.org>

	PR 1344/bsps
	* configure.ac, clock/ckinit.c, timer/timer.c: Add use of TSC for
	nanoseconds granularity. i8254 is very slow on some systems. TSC use
	is auto-detected by default.

2008-12-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspgetworkarea.c: Remove debug prints.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspgetworkarea.c: Fix botched edit.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspgetworkarea.c: Change size_t to ssize_t on
	bsp_get_work_area(). On 16-bit architectures, size_t can be 16-bits
	which would limit the work area to 64K.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Turn = into +=.

2008-10-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.
